[package]
name = "rust_postgres"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-binstall = "0.21.3"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres"]}
tokio = "1.28.0"
